PGOV-1197 fix location popup on mobile

--- a/web/modules/custom/portland/modules/portland_location_picker/css/portland_location_picker.css
+++ b/web/modules/custom/portland/modules/portland_location_picker/css/portland_location_picker.css
@@ -101,6 +101,19 @@ input.location-verify {
   filter: grayscale(100%);
 }
 
+div.leaflet-bottom.leaflet-left .custom-control {
+  /* Add margin so popup doesn't overlap with controls */
+  margin-right: 50px;
+  margin-bottom: 20px;
+}
+
+/* Remove bottom margin at MD breakpoint since attribution control shouldn't be in the way anymore */
+@media (min-width: 768px) {
+  div.leaflet-bottom.leaflet-left .custom-control {
+    margin-bottom: 10px;
+  }
+}
+
 span#verified-text {
   color: Green;
   font-weight: bold;
